# Craft

./: 1.py  README.md  Task_1.py  alembic.ini  csv_file_in.py  pyproject.toml
alembic/versions/: 04bb778ae91a_create_data_fields_table.py  05b3beafe296_initial_migration.py  0e3bd8af0cef_create_data_fields_table.py  22a1f0267531_initial_migration.py  41c109631794_initial_migration.py  48bef490457b_initial_migration.py  66aa62879a1a_initial_migration.py  94fbc5a23054_initial_migration.py  9794c1c9a964_create_data_fields_table.py  c947e8d2f868_create_data_fields_table.py  d27d248d069d_initial_migration.py  d39e01dd64aa_create_data_fields_table.py  fd040bbfbf03_initial_migration.py
app/: main.py
app/api/v1/endpoints/: data_fields.py
app/core/: config.py
app/db/: __init__.py  database.py
app/models/: data_fields.py
app/schemas/: data_fields.py
app/services/: data_field_service.py
migrations/: env.py
migrations/versions/: 10c8f644a643_initial_migration.py  63498008c870_initial_migration.py  65131c89fb0a_initial_migration.py  b2570892d489_initial_migration.py  b473f133c85f_initial_migration.py  ed2a8795ad74_initial_migration.py
태스크_별_파일/: Task_1.py  Task_2.py
